2008-11-18  Josselin Mouette  <joss@malsain.org>

	Patch from Martin Pitt <martin.pitt@ubuntu.com>

	* util.c: (esd_get_socket_dirname): support multiple esd 
	instances (one per user).

2008-11-18  Josselin Mouette  <joss@malsain.org>

	Patch from Martin Pitt <martin.pitt@ubuntu.com>

	* esdlib.c: Check if the esd binary exists at all. If not, 
	forego forking a shell and trying to execute it. This both 
	improves startup time and also avoids the "/bin/sh: 
	/usr/bin/esd: not found" warning.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* audio_alsa09.c: fix signedness of parameters passed to the 
	ALSA API.

2008-11-18  Josselin Mouette  <joss@malsain.org>

        Patch from Ryan Murray <rmurray@debian.org>

	* clients.c: (get_new_clients): prettier debugging output.

2008-11-18  Josselin Mouette  <joss@malsain.org>

        Patch from Ryan Murray <rmurray@debian.org>

	* esdlib.c: Remove libesddsp from LD_PRELOAD when autospawning 
	esd.

2008-11-18  Josselin Mouette  <joss@malsain.org>

        Patch from Jeff Waugh <jeff.waugh@ubuntu.com>, credits for 
        diagnosing the issue go to Jan Schmidt.

	* esdlib.c: do not modify host passed to esd_sound_open, 
	because that is highly offensive. (Fixes GStreamer using 
	ESPEAKER.)

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esddsp.c: (mmap64): ship an implementation of mmap64.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esd.c: (main): close the spawnfd when the startup is 
        successful.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esd.c: (main): save a call to esd_audio_pause when run with 
	-nobeeps.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esd.c: (main): allow the spawnfd to be 0, which is a valid 
          FD. Do never play beeps when esd has just been spawned.

2008-11-18  Josselin Mouette  <joss@malsain.org>

        Patches from Ryan Murray <rmurray@debian.org>

	* esd.c: (esd_connect_unix): prevent strncpy from writing a 