@@ -1,5 +1,11 @@
 2008-11-18  Josselin Mouette  <joss@malsain.org>
 
+	* esddsp.c: (dsp_init): Protect dsp_init() with a mutex to 
+	prevent race conditions from multiple calls (which hanged the 
+	desktop session).
+
+2008-11-18  Josselin Mouette  <joss@malsain.org>
+
 	Patch from Martin Pitt <martin.pitt@ubuntu.com>
 
 	* util.c: (esd_get_socket_dirname): support multiple esd 
